--- a/form.html
+++ b/form.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <title>Document</title>
 </head>
 <body>
-    <h1>Employee Registration Form</h1>
+    <form>  
+        <h1>Employee Registration Form</h1>  
+        <table>
+            <tr>
+                <td>Gender</td>
+                <td>
+                    <input type="radio" id="gender" name="gender" value="male"/ checked> Mr.      
+                    <input type="radio" id="gender" name="gender" value="female"/> Mrs. 
+                    <input type="radio" id="gender" name="gender" value="female"/> Ms. 
+                </td>
+            </tr>
+            <tr>
+                <td> <label for="fname">First Name:</label></td>
+                <td> <input type="text" id="fname" name="fname"></td>
+            </tr>
+            <tr>
+                <label for="lname">Last Name:</label>
+                <input type="text" id="lname" name="lname">
+            </tr> 
+            <tr>
+                <label for="lname">Mail Address 1:</label>
+                <input type="text" id="lname" name="lname">
+            </tr> 
+            <tr>
+                <label for="lname">Mail Address 2:</label>
+                <input type="text" id="lname" name="lname">
+            </tr> 
+            <tr>
+                <label for="lname">City:</label>
+                <input type="text" id="lname" name="lname">
+            </tr> 
+        </table>
+       
+  <!-- <input type="submit" value="Submit"> -->
+        </form>    
+   
+
 </body>
 </html>
