--- a/form.html
+++ b/form.html
@@ -8,9 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div class=" grid gap-x-7  grid-cols-3">
+        <div class="border-solid border-2 border-amber-600 drop-shadow-md bg-gradient-to-r from-indigo-200 via-purple-200 to-pink-200 ">
     <form>  
-        <h1 class="text-red-500 text-3xl font-bold">Employee Registration Form</h1>  
-        <table class="mt-3">
+        <h1 class="text-black text-2xl font-bold text-center mt-2">Employee Registration Form</h1>  
+        <table class="mt-3 ml-14">
             <tr>
                 <td></td>
                 <td>
@@ -21,18 +23,18 @@
             </tr>
             <tr>
                 <td>First Name:</td>
-                <td><input type="text" id="fname" name="fname" placeholder="first name"></td>
+                <td><input type="text" id="fname" name="fname" placeholder="First Name"></td>
             </tr>
             <tr>
                 <td> <label for="lname">Last Name:</label></td>
-                <td> <input type="text" id="lname" name="lname" placeholder="last name"></td>
+                <td> <input type="text" id="lname" name="lname" placeholder="Last Name"></td>
             </tr>
             <tr>
-                <td> <label for="mailA1">Mail Address 1:</label></td>
+                <td> <label for="mailA1">Address 1:</label></td>
                 <td> <input type="text" id="mailA1" name="mailA1"></td>
             </tr>
             <tr>
-                <td> <label for="mailA2">Mail Address 2:</label></td>
+                <td> <label for="mailA2">Address 2:</label></td>
                 <td> <input type="text" id="mailA2" name="mailA2"></td>
             </tr>
             <tr>
@@ -79,8 +81,8 @@
     </tr>
     <tr>
                
-        <td> <label for="ln">Laguages Known:</label></td>
-        <td><input type="checkbox" id="ln" name="ln" value="Lang" checked>Gujarati</td>
+        <td> <label for="ln">Lang.Known:</label></td>
+        <td><input type="checkbox" id="ln" name="ln" value="Lang" checked>Gujarati </td>
     </tr>
     <tr>
         <td></td>
@@ -96,16 +98,21 @@
     </tr>
     <tr>
         <td>Additional information</td>
-        <td><textarea placeholder="optional"></textarea></td>
+        <td><textarea placeholder="Optional"></textarea></td>
     </tr>
         
        <tr>
         <td></td>
-        <td><button type="submit" form="nameform" value="Submit">Submit</button> &nbsp;<button type="reset" form="nameform" value="reset">Reset</button></td>
+        <td><button class="p-2 m-2 bg-gray-300 border-solid border-2 border-indigo-600 rounded-lg" type="submit" form="nameform" value="Submit">Submit</button> &nbsp;<button class="p-2 m-2 bg-gray-300 border-solid border-2 border-indigo-600 rounded-lg" type="reset" form="nameform" value="reset">Reset</button></td>
        </tr>
     </table>
-        </form>    
-   
+        </form> 
+    </div>
+    <div class="bg-gray-300 col-span-2">
+        <h1 class="text-red-500 text-3xl font-bold">Employee List</h1>  
+
+    </div>   
+    </div>
 
 </body>
 </html>
