--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
     <body>
         <div class=" grid gap-x-7  grid-cols-3">
             <div class="border-solid border-2 border-amber-600 drop-shadow-md bg-gradient-to-r from-indigo-200 via-purple-200 to-pink-200 ">
-                <form>
+                <form method="post" action="#">
                     <h1 class="text-black text-2xl font-bold text-center mt-2">Employee Registration Form</h1>
                     <table class="mt-3 ml-14">
                         <tr>
@@ -96,7 +96,7 @@
                                 <label for="email" class="after:content-['*'] after:text-red-400">Email:</label>
                             </td>
                             <td>
-                                <input type="text" id="email" name="email"></td>
+                                <input type="email" id="email" name="email"></td>
                         </tr>
                         <tr>
 
@@ -136,7 +136,7 @@
                         <tr>
                             <td></td>
                             <td>
-                                <button class="p-2 m-2 bg-gray-300 border-solid border-2 border-indigo-600 rounded-lg" type="submit" form="nameform" value="Submit" onclick="submitValue()">Submit</button>
+                                <button class="p-2 m-2 bg-gray-300 border-solid border-2 border-indigo-600 rounded-lg" type="submit" form="nameform" value="Submit" >Submit</button>
                                 &nbsp;<button class="p-2 m-2 bg-gray-300 border-solid border-2 border-indigo-600 rounded-lg" type="reset" form="nameform" value="reset">Reset</button>
                             </td>
                         </tr>
@@ -171,11 +171,12 @@
                 </table>
             </div>
         </div>
-<script>
+<!-- <script>
   function submitValue()
     {
         console.log("hello submit click");
+        
     }
-</script>
+</script> -->
     </body>
 </html>
