Changed values of value attribute of state field

--- a/form.html
+++ b/form.html
@@ -37,17 +37,17 @@
                         </tr>
                         <tr>
                             <td>
-                                <label for="mailA1">Address 1:</label>
+                                <label for="A1">Address 1:</label>
                             </td>
                             <td>
-                                <input type="text" id="mailA1" name="mailA1"></td>
+                                <input type="text" id="A1" name="A1"></td>
                         </tr>
                         <tr>
                             <td>
-                                <label for="mailA2">Address 2:</label>
+                                <label for="A2">Address 2:</label>
                             </td>
                             <td>
-                                <input type="text" id="mailA2" name="mailA2"></td>
+                                <input type="text" id="A2" name="A2"></td>
                         </tr>
                         <tr>
                             <td>
@@ -64,10 +64,10 @@
                             </td>
                             <td>
                                 <select name="state" id="state">
-                                    <option value="Gujrat" selected>Gujrat</option>
-                                    <option value="saab">Maharashtra</option>
-                                    <option value="opel">Kerala</option>
-                                    <option value="audi">Karnataka</option>
+                                    <option value="Gujarat" selected>Gujarat</option>
+                                    <option value="Maharashtra">Maharashtra</option>
+                                    <option value="Kerala">Kerala</option>
+                                    <option value="Karnataka">Karnataka</option>
                                 </select>
 
                             </td>
@@ -94,9 +94,12 @@
 
                             <td>
                                 <label for="email" class="after:content-['*'] after:text-red-400">Email:</label>
+                            
                             </td>
                             <td>
-                                <input type="email" id="email" name="email"></td>
+                                <input type="email" id="email" name="email">
+                            </td>
+                            
                         </tr>
                         <tr>
 
